--- a/components/home/home.html
+++ b/components/home/home.html
@@ -1,28 +1,40 @@
   <div class="message">
         <div class="container" >
-            <h1>umbrella Alert</h1>
+          
 
               <div class="row">
 
-            <div class="col s6">
-                <img src="shared/img/bot.png" alt="">
+                  <div class="col s12  align-center">
+                  <h1>umbrella Alert</h1>
             </div>
+
+            <div class="col s6 offset-s1  offset-m3 offset-l3 align-center">
+                <img src="shared/img/bot.png" alt="">
+                
+            </div>
+
+            <div class="col s12 align-center">
+               
+                 <p>A bot that keeps you dry...</p>
+            </div>
+
+             <div class="col s9 m6 l6 offset-l3 offset-m3 offset-s2 align-center">
+                <input class="white" type="text" placeholder="email">
+                <button class="btn purple"> Signup </button>
+                
+            </div>
+
 
 
         
 
         </div>
 
-            <p>Get alerted before it rains...</p>
-
-            <div class="container">
-
-                <input class="white" type="text" placeholder="email">
-                <button class="btn purple"> Signup </button>
-
-            </div>
+           
+        <a id="weatherIcon" ng-href="/#!/dashboard" class="btn btn-floating btn-large pulse purple"><i class="material-icons">launch</i></a>
+            
         </div>
-        <a class="arrow bounce " href=""></a>
-        <a class="btn btn-floating btn-large pulse purple"><i class="material-icons">launch</i></a>
+
+        
 
     </div>
