--- a/components/Weather/dashboard.html
+++ b/components/Weather/dashboard.html
@@ -71,8 +71,8 @@
 
 
         <div class="row">
-            <div class="col l1 m6 s6 offset-s5 offset-m5 offset-l11">
-                       <a ng-href="/#!/" class="btn btn-floating btn-large pulse purple"><i class="material-icons">navigation</i></a>
+            <div class="col l6 m6 s6 offset-s5 offset-m5 offset-l6">
+                       <a id="weatherIcon" ng-href="/#!/" class="btn btn-floating btn-large pulse purple"><i class="material-icons">navigation</i></a>
             </div>
 
         </div>
