--- a/shared/css/main.css
+++ b/shared/css/main.css
@@ -16,14 +16,6 @@ ul {
     list-style: none;
 }
 
-li{
-    border: solid 1px #ccc;
-    float: left;
-    width: 200px;
-    height: 200px;
-    margin: 10px;
-    background-color: #ccc;
-}
 
 input{
     width: 40%;
@@ -33,8 +25,8 @@ input{
     min-height: 100vh;
     width: auto;
     /*background-image: url('./rain.jpg');*/
-    background-color:#16002d; 
-    background-color: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8) );
+    background-color: rgba(0, 121,146, 1); 
+  
     background-position:center top;
     padding: 10px;
     padding-bottom: 0px !important;
